--- a/app/components/timeline/calendar_component.html.erb
+++ b/app/components/timeline/calendar_component.html.erb
@@ -5,14 +5,18 @@
         <%= day_display(day[:day]) %>
       </div>
       <% if day[:meetups] %>
+        <%= turbo_stream_from "meetups" %>
+        <%= turbo_frame_tag "meetups" %>
         <% day[:meetups].each do |meetup| %>
-          <div class="meetup">
-            <%= meetup.contact.first_name %>
-            <%= meetup.meetup_day.strftime("%H:%M:%S") %>
-            <%= link_to meetup_path(meetup), method: :delete do %>
-              x
-            <% end %>
-          </div>
+          <%= turbo_frame_tag dom_id(meetup) %>
+            <div class="meetup">
+              <%= meetup.contact.first_name %>
+              <%= meetup.meetup_day.strftime("%H:%M:%S") %>
+              <%= link_to meetup_path(meetup), method: :delete do %>
+                x
+              <% end %>
+            </div>
+          <% end %>
         <% end %>
       <% end %>
       <% if day[:reminders] %>
