--- a/app/components/timeline/calendar_component.html.erb
+++ b/app/components/timeline/calendar_component.html.erb
@@ -8,7 +8,7 @@
         <%= turbo_stream_from "meetups" %>
         <%= turbo_frame_tag "meetups" %>
         <% day[:meetups].each do |meetup| %>
-          <%= turbo_frame_tag dom_id(meetup) %>
+          <%= turbo_frame_tag dom_id(meetup) do %>
             <div class="meetup">
               <%= meetup.contact.first_name %>
               <%= meetup.meetup_day.strftime("%H:%M:%S") %>
