--- a/app/assets/stylesheets/components/_calendar.scss
+++ b/app/assets/stylesheets/components/_calendar.scss
@@ -1,18 +1,29 @@
 .calendar-entry {
   border: 1px solid lightgrey;
-  background: #ffff;
-  padding: 16px 12px;
+  border-radius: 8px;
+  margin-bottom: 8px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
   &-header {
+    background: #0069d1;
+    border-radius: 8px 8px 0px 0px;
+
     font-size: 24px;
+    color: white;
+    padding: 16px 12px 12px 12px;
   }
 }
 
-.reminder, .meetup {
-  padding: 4px;
-  border-radius: 2px;
+.reminder, .meetup, .open-slot {
+  padding: 8px;
+  border-radius: 4px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  a {
+    color: black;
+  }
 }
 
 .reminder {
   border: 1px solid #efefef;
-  background-color: orange;
 }
