--- a/app/views/timelines/index.html.erb
+++ b/app/views/timelines/index.html.erb
@@ -1,2 +1,3 @@
+<%= render Timeline::UpcomingComponent.new(contacts: current_user.contacts, user: current_user) %>
 <%= render Timeline::CalendarComponent.new(contacts: current_user.contacts, user: current_user) %>
 
