--- a/app/views/timelines/index.html.erb
+++ b/app/views/timelines/index.html.erb
@@ -1,3 +1,13 @@
-<%= render Timeline::UpcomingComponent.new(contacts: current_user.contacts, user: current_user) %>
-<%= render Timeline::CalendarComponent.new(contacts: current_user.contacts, user: current_user) %>
+<div class="d-flex">
+  <div class="col-sm-3">
+    left
+  </div>
+  <div class="col-sm-6">
+    <%= render Timeline::UpcomingComponent.new(contacts: current_user.contacts, user: current_user) %>
+    <%= render Timeline::CalendarComponent.new(contacts: current_user.contacts, user: current_user) %>
+  </div>
+  <div class="col-sm-3">
+    right
+  </div>
+</div>
 
