--- a/app/views/meetups/_meetup.html.erb
+++ b/app/views/meetups/_meetup.html.erb
@@ -1,4 +1,4 @@
-<%= turbo_frame_tag "meetups" do %>
+<%= turbo_frame_tag meetup do %>
   <div class="meetup">
     <div class="meetup-info">
       <i class="far fa-calendar-alt"></i>
