--- a/app/components/timeline/reminders_component.html.erb
+++ b/app/components/timeline/reminders_component.html.erb
@@ -1,1 +1,17 @@
-<div>Add Timeline::Reminders template here</div>
+<div class="reminders">
+  <h2>You have need to catch up with <%= pluralize(reminders.count, "person") %></h2>
+  <div class="week-reminders">
+    <% reminders.each do |reminder| %>
+      <div class="week-reminder-contact">
+        <%= reminder.contact.first_name %> in <%= time_ago_in_words(reminder.reminder_day) %>
+      </div>
+    <% end %>
+  </div>
+</div>
+<div class="reminder-contacts">
+  <% reminders.each do |reminder| %>
+    <div class="reminder-contact">
+      Last time you met <%= reminder.contact.first_name %> was <%= last_reminder_date(reminder.contact) %> but you want to meet up approx ~<%= reminder.contact.contact_frequency %> days
+    </div>
+  <% end %>
+</div>
