--- a/app/components/timeline/upcoming_component.html.erb
+++ b/app/components/timeline/upcoming_component.html.erb
@@ -1,8 +1,10 @@
 <div class="upcoming">
-  <h2>You have are catching up with <%= pluralize(upcoming_contacts.count, "person") %> this week</h2>
-  <div class="week-reminders">
+  <h2>You are catching up with <%= pluralize(upcoming_contacts.count, "person") %> this week</h2>
+  <div class="week-upcomings">
     <% upcoming_meetups.each do |meetup| %>
-      <%= meetup.contact.first_name %> in <%= time_ago_in_words(meetup.meetup_day) %>
+      <div class="week-upcomings-contact">
+        <%= meetup.contact.first_name %> in <%= time_ago_in_words(meetup.meetup_day) %>
+      </div>
     <% end %>
   </div>
 </div>
