--- a/app/components/timeline/reminders_component.html.erb
+++ b/app/components/timeline/reminders_component.html.erb
@@ -1,5 +1,5 @@
 <div class="reminders">
-  <h2>You have need to catch up with <%= pluralize(reminders.count, "person") %></h2>
+  <h2>You need to catch up with <%= pluralize(reminders.count, "person") %></h2>
   <div class="week-reminders">
     <% reminders.each do |reminder| %>
       <div class="week-reminder-contact">
