--- a/app/assets/stylesheets/components/_calendar.scss
+++ b/app/assets/stylesheets/components/_calendar.scss
@@ -6,10 +6,15 @@
   &-header {
     background: #0069d1;
     border-radius: 8px 8px 0px 0px;
-
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     font-size: 24px;
     color: white;
     padding: 16px 12px 12px 12px;
+    .fas {
+      color: white;
+    }
   }
 }
 
