created contacts form

--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,3 +1,4 @@
 <section id="contacts">
+  <%= link_to "add contact", new_user_contact_path %>
   <%= render Contacts::CardComponent.with_collection(@contacts) %>
 </section>
