--- a/app/components/contacts/card_component.html.erb
+++ b/app/components/contacts/card_component.html.erb
@@ -1,3 +1,5 @@
-<%= contact.first_name %>
-<%= contact.last_name %>
-<%= contact.contact_frequency %>
+<div class="card">
+  <%= contact.first_name %>
+  <%= contact.last_name %>
+  <%= contact.contact_frequency %>
+</div>
