--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,7 +12,7 @@
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
         <li class="nav-item active">
-          <%= link_to "Home", "#", class: "nav-link" %>
+          <%= link_to "Timeline", user_timelines_path(user: current_user), class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to "Contacts", user_contacts_path(user: current_user), class: "nav-link" %>
